force-app/main/default/objects/FieloPLT__RedemptionItem__c/FieloPLT__RedemptionItem__c.object-meta.xml
<CustomObject>
    <description>Redemption Items represent each item which is part of a Redemption order.</description>
    <label>Redemption Item</label>
    <nameField>
        <displayFormat>RI-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redemption Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>