force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/FieloPLT__Code__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Code__c</fullName>
    <description>Preloaded or randomly generated code included in the Unique voucher.</description>
    <inlineHelpText>Preloaded or randomly generated code included in the Unique voucher.</inlineHelpText>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>