force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/FieloPLT__CodeRange__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__CodeRange__c</fullName>
    <description>It completes the Code to obtain the non-repeating digits needed for the Unique code generation.</description>
    <inlineHelpText>It completes the Code to obtain the non-repeating digits needed for the Unique code generation.</inlineHelpText>
    <label>Code Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>