force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/FieloPLT__DeliveredDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__DeliveredDate__c</fullName>
    <description>Date when the Redemption is delivered.</description>
    <inlineHelpText>Date when the Redemption is delivered.</inlineHelpText>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>