force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/FieloPLT__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ExpirationDate__c</fullName>
    <description>Redemption item expiration date.</description>
    <inlineHelpText>Redemption item expiration date.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>