force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/FieloPLT__IsInstantRedemption__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsInstantRedemption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Redemption item from an Instant Reward.</description>
    <inlineHelpText>When ticked, a Redemption item was generated from an Instant Reward.</inlineHelpText>
    <label>Instant Redemption</label>
    <type>Checkbox</type>
</CustomField>