force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/FieloPLT__Points__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Points__c</fullName>
    <description>Points needed to redeem the Redemption item</description>
    <inlineHelpText>Points needed to redeem the Redemption item.</inlineHelpText>
    <label>Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>