force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/FieloPLT__ProviderOrder__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ProviderOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Provider Order related to the Redemption. Used when fulfillment is by an external provider.</description>
    <inlineHelpText>When the order fulfilled externally, this record contains data from the provider.</inlineHelpText>
    <label>Provider Order</label>
    <referenceTo>FieloPLT__ProviderOrder__c</referenceTo>
    <relationshipLabel>Redemption Items</relationshipLabel>
    <relationshipName>RedemptionItems</relationshipName>
    <type>Lookup</type>
</CustomField>