force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/FieloPLT__Quantity__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of Redemption items.</description>
    <inlineHelpText>Number of Redemption items.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>