force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/FieloPLT__Redemption__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Redemption__c</fullName>
    <description>The Redemption order that the Member has made.</description>
    <inlineHelpText>The Redemption order that the Member has made.</inlineHelpText>
    <label>Redemption</label>
    <referenceTo>FieloPLT__Redemption__c</referenceTo>
    <relationshipLabel>Redemption Items</relationshipLabel>
    <relationshipName>RedemptionItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>