force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/FieloPLT__Reward__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Reward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Reward that the Member has redeemed.</description>
    <inlineHelpText>The Reward that the Member has redeemed.</inlineHelpText>
    <label>Reward</label>
    <referenceTo>FieloPLT__Reward__c</referenceTo>
    <relationshipLabel>Redemption Items</relationshipLabel>
    <relationshipName>RedemptionItems</relationshipName>
    <type>Lookup</type>
</CustomField>