force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/FieloPLT__RewardItem__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RewardItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Reward Item to be delivered to the Member. Used only for Rewards whose stock is &quot;Controlled by item&quot;.</description>
    <inlineHelpText>The Reward Item to be delivered to the Member. Used only for Rewards whose stock is &quot;Controlled by item&quot;.</inlineHelpText>
    <label>Reward Item</label>
    <referenceTo>FieloPLT__RewardItem__c</referenceTo>
    <relationshipLabel>Redemption Items</relationshipLabel>
    <relationshipName>RedemptionItems</relationshipName>
    <type>Lookup</type>
</CustomField>