force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/FieloPLT__UnitCost__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__UnitCost__c</fullName>
    <description>It displays the cost per unit of the Redemption Item.</description>
    <inlineHelpText>Cost per unit of the Redemption Item.</inlineHelpText>
    <label>Unit Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>