force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_AnoFiscal__c.field-meta.xml
<CustomField>
    <fullName>V_AnoFiscal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Ano fiscal relacionado ao registro.</description>
    <inlineHelpText>Ano fiscal relacionado ao registro.</inlineHelpText>
    <label>Ano Fiscal OLD</label>
    <referenceTo>VN_MetasParticipantes__c</referenceTo>
    <relationshipLabel>Lances Realizados</relationshipLabel>
    <relationshipName>Lance_Realizados</relationshipName>
    <type>Lookup</type>
</CustomField>