force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_BetcoinsComp__c.field-meta.xml
<CustomField>
    <fullName>V_BetcoinsComp__c</fullName>
    <description>Saldo de pontos gerado pela iniciativa Youbet Extra. Quando a iniciativa for criada, necessário renomear o rótulo do campo para &quot;Betcoins - Nome do Leilão&quot;.</description>
    <inlineHelpText>Saldo de pontos gerado pela iniciativa Youbet Extra. Quando a iniciativa for criada, necessário renomear o rótulo do campo para &quot;Betcoins - Nome do Leilão&quot;.</inlineHelpText>
    <label>Betcoins - Extra</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>