force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_BetcoinsCompSaldo__c.field-meta.xml
<CustomField>
    <fullName>V_BetcoinsCompSaldo__c</fullName>
    <description>Saldo de betcoins extra do participante.</description>
    <formula>FieloPLT__Redemption__r.FieloPLT__Member__r.V_BetcoinsComp__c</formula>
    <inlineHelpText>Saldo de betcoins extra do participante.</inlineHelpText>
    <label>Betcoins Extra - Saldo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>