force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_BetcoinsInvestidos__c.field-meta.xml
<CustomField>
    <fullName>V_BetcoinsInvestidos__c</fullName>
    <description>Campo para consolidar o total de betcoins utilizados em perene ou complementar para ser usado em telas do Front End.</description>
    <formula>IF(

 FieloPLT__Points__c &gt; 0, FieloPLT__Points__c, V_BetcoinsComp__c 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo para consolidar o total de betcoins utilizados em perene ou complementar para ser usado em telas do Front End.</inlineHelpText>
    <label>Betcoins Investidos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>