force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_BetcoinsSaldo__c.field-meta.xml
<CustomField>
    <fullName>V_BetcoinsSaldo__c</fullName>
    <description>Saldo de betcoins do participante.</description>
    <formula>FieloPLT__Redemption__r.FieloPLT__Member__r.FieloPLT__Points__c</formula>
    <inlineHelpText>Saldo de betcoins do participante.</inlineHelpText>
    <label>Betcoins - Saldo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>