force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_DataCriacao__c.field-meta.xml
<CustomField>
    <fullName>V_DataCriacao__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>Data da Criação</label>
    <type>Date</type>
</CustomField>