force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_DataHoraFimYoubet__c.field-meta.xml
<CustomField>
    <fullName>V_DataHoraFimYoubet__c</fullName>
    <formula>FieloPLT__Reward__r.V_DataHoraFimYoubet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data/Hora Fim do Youbet</label>
    <type>DateTime</type>
</CustomField>