force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_DataHoraInicioYoubet__c.field-meta.xml
<CustomField>
    <fullName>V_DataHoraInicioYoubet__c</fullName>
    <formula>FieloPLT__Reward__r.V_DataHoraInicioYoubet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data/Hora Início do Youbet</label>
    <type>DateTime</type>
</CustomField>