force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_EmailParticipante2__c.field-meta.xml
<CustomField>
    <fullName>V_EmailParticipante2__c</fullName>
    <formula>FieloPLT__Redemption__r.FieloPLT__Member__r.FieloPLT__Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Participante</label>
    <type>Text</type>
</CustomField>