force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_EmailParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_EmailParticipante__c</fullName>
    <description>Email do participante relacionado ao Item de resgate.</description>
    <inlineHelpText>Email do participante relacionado ao Item de resgate.</inlineHelpText>
    <label>E-mail do Participante</label>
    <type>Email</type>
</CustomField>