force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_Iniciativa__c.field-meta.xml
<CustomField>
    <fullName>V_Iniciativa__c</fullName>
    <description>Nome da iniciativa do Youbet.</description>
    <formula>TEXT(FieloPLT__Reward__r.Iniciativa__c)</formula>
    <inlineHelpText>Nome da iniciativa do Youbet.</inlineHelpText>
    <label>Iniciativa</label>
    <type>Text</type>
</CustomField>