force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_LanceGanhador__c.field-meta.xml
<CustomField>
    <fullName>V_LanceGanhador__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo indica o lance do leilão ganhador (maior quantidade de pontos). Será atualizado por batch após o término da vigência do leilão.</description>
    <inlineHelpText>Campo indica o lance do leilão ganhador (maior quantidade de pontos). Será atualizado por batch após o término da vigência do leilão.</inlineHelpText>
    <label>Lance Ganhador</label>
    <type>Checkbox</type>
</CustomField>