force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_MetaParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_MetaParticipante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meta do Participante</label>
    <referenceTo>VN_MetaParticipante__c</referenceTo>
    <relationshipLabel>Itens de Resgate/Lance</relationshipLabel>
    <relationshipName>Itens_de_Resgate_Lance</relationshipName>
    <type>Lookup</type>
</CustomField>