force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_NomeParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_NomeParticipante__c</fullName>
    <formula>FieloPLT__Redemption__r.FieloPLT__Member__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Participante</label>
    <type>Text</type>
</CustomField>