force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_NomePremio__c.field-meta.xml
<CustomField>
    <fullName>V_NomePremio__c</fullName>
    <formula>FieloPLT__Reward__r.Name</formula>
    <label>Nome do Prêmio</label>
    <type>Text</type>
</CustomField>