force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_NomeTratamentoParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_NomeTratamentoParticipante__c</fullName>
    <formula>FieloPLT__Redemption__r.FieloPLT__Member__r.V_NomeTratamento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome de Tratamento (Participante)</label>
    <type>Text</type>
</CustomField>