force-app/main/default/objects/FieloPLT__RedemptionItem__c/fields/V_Participante__c.field-meta.xml
<CustomField>
    <fullName>V_Participante__c</fullName>
    <description>Nome completo do participante envolvido no resgate/lance.</description>
    <formula>FieloPLT__Redemption__r.FieloPLT__Member__r.Name</formula>
    <inlineHelpText>Nome completo do participante envolvido no resgate/lance.</inlineHelpText>
    <label>Participante</label>
    <type>Text</type>
</CustomField>