force-app/main/default/objects/FieloPLT__RedemptionItem__c/validationRules/FieloPLT__QuantityGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__QuantityGreaterThanZero</fullName>
    <active>true</active>
    <description>Quantity must be greater than 0.</description>
    <errorConditionFormula>FieloPLT__Quantity__c &lt;= 0</errorConditionFormula>
    <errorMessage>Quantity must be greater than 0.</errorMessage>
</ValidationRule>